2005-02-01 17:55 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridCollapseCost) added logic to set the
	boundary face and edge parameters while evaluating new
	configurations. NOTE: Disabled Unit Test!!!

2005-02-01 16:11 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatio) to better estimate the length
	of an edge in mapped space with a linearly varying metric the
	matric is averaged instead of the edge lengths computed at each
	node.

2005-02-01 14:33 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridwritetecplotsurfacezone_) the logic that
	chooses which cells are bad and need to be written now uses gridAR
	to be consistant with all other contraint tests.

2005-02-01  9:18 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) added local processor checks to
	the two faces that are required to be added to test validity
	durring swap evaluations. Swap will abort if niether face belongs
	to other processor.

2005-01-31 11:40 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.6 Release. ** internal release ** the om6 test case is
	working.

2005-01-31 22:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) called gridSwapFace when queue
	in NULL to allow face swapping on partition interiors.
	* src/gridswap.c (gridSwapFace) added protectection so that it
	will not face swap on partition boundaries, so it can be used on
	the interior of partitions.

2005-01-31 21:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeAt,gridCollapseEdge) only perform
	projection when gridCostConstraint contains gridCOST_CNST_VALID.

2005-01-31 17:10 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridProjectNode) Major refactoring to clean out
	gridSafeProjectNode. Now the face parameters are updated durring
	projection of edges.

2005-01-31 15:22 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.5 Release. ** internal release ** the
	-DSURFACE_VALIDITY path has been removed. om6 test case runs, but